tests/parse/snapshots/file_tests__parse__err_sync_to_stmt.lx.snap
---
source: tests/parse.rs
description: "// Parser should catch an error on every non-empty line.\n{;}\nvar (x);\nprint var;\n"
expression: render_dcx()
---
error: unclosed braces
  --> err_sync_to_stmt.lx:2:2
  |
2 | {;}
  | -^ braces should have been closed here
  | | 
  | braces opened here
  |
  = note: expected `}`

error: statement terminated prematurely
  --> err_sync_to_stmt.lx:2:2
  |
2 | {;}
  |  ^ statement terminated here
  |
  = note: expected expression

error: unexpected `}` token in input
  --> err_sync_to_stmt.lx:2:3
  |
2 | {;}
  |   ^ unexpected token here
  |
  = note: expected expression

error: missing name in variable declaration
  --> err_sync_to_stmt.lx:3:5
  |
3 | var (x);
  | --- ^ expected variable name here
  | |    
  | declaration requires a variable name
  |
  = note: expected identifier

error: unexpected keyword `var` token in input
  --> err_sync_to_stmt.lx:4:7
  |
4 | print var;
  |       ^^^ unexpected token here
  |
  = note: expected expression
